# ai-sync

./: .ai-sync.yaml  .env.tpl  .gitignore  AGENTS.md  README.md  justfile  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: ci.yml  release.yml
config/client-settings/: settings.example.yaml
config/mcp-servers/: servers.example.yaml
config/mcp-servers/secrets/: secrets.example.yaml
config/rules/: hardening_plan_loop.md
doc/: AUTH_MATRIX.md  OAUTH_REPORT.md
scripts/: uninstall_ai_sync.sh
scripts/auto-sync/: install_auto_sync.sh  notify_sync.sh  run_sync_once.sh  watch_ai_sync.sh  watch_sync.py
scripts/client-sync/: helpers.py  pyproject.toml  pyrightconfig.json  requirements.txt  sync_ai_configs.py
scripts/client-sync/clients/: base.py  codex.py  cursor.py  gemini.py
scripts/client-sync/sync_ai_configs/: __init__.py  cli.py  env_loader.py  helpers.py  interactive.py  manifest_loader.py  mcp_sync.py  models.py  op_inject.py  precedence.py  sync_runner.py  version_checks.py
scripts/client-sync/sync_ai_configs/clients/: __init__.py  base.py  codex.py  cursor.py  gemini.py
scripts/client-sync/sync_ai_configs/display/: __init__.py  base.py  plain.py  rich.py
scripts/client-sync/tests/: test_helpers.py
scripts/shared/: op_account_install.py  sync_summary.py
src/ai_sync/: artifacts.py  cli.py  command_handlers.py  config_store.py  env_config.py  gitignore.py  helpers.py  interactive.py  manifest_loader.py  mcp_sync.py  models.py  op_inject.py  path_ops.py  planning.py  project.py  repo_store.py  requirements_checker.py  requirements_loader.py  sync_runner.py  track_write.py  version.py
src/ai_sync/adapters/: __init__.py  filesystem.py  process_runner.py  state_store.py
src/ai_sync/clients/: __init__.py  base.py  claude.py  codex.py  cursor.py  gemini.py
src/ai_sync/data_classes/: __init__.py  artifact.py  plan_context.py  requirement_check_result.py  resolved_artifact_set.py  resolved_source.py  runtime_bootstrap.py  runtime_env.py  state_entry.py  write_spec.py
src/ai_sync/di/: __init__.py  bootstrap.py  container.py
src/ai_sync/display/: base.py  plain.py
src/ai_sync/helpers/: __init__.py  delete_at_path.py  ensure_dir.py  escape_path_segment.py  get_at_path.py  set_at_path.py  split_path.py  to_kebab_case.py  validate_client_settings.py
src/ai_sync/models/: __init__.py  apply_plan.py  client_override_config.py  env_dependency.py  env_var_config.py  mcp_manifest.py  mcp_server_config.py  oauth_config.py  oauth_override_config.py  plan_action.py  plan_source.py  project_manifest.py  requirement.py  requirement_version.py  requirements_manifest.py  server_config.py  source_config.py  source_metadata.py
src/ai_sync/services/: __init__.py  apply_service.py  artifact_preparation_service.py  artifact_service.py  compatibility_service.py  config_store_service.py  display_service.py  doctor_service.py  environment_service.py  error_handler_service.py  git_safety_service.py  git_source_fetcher_service.py  install_service.py  managed_output_service.py  mcp_preparation_service.py  mcp_server_service.py  one_password_auth_service.py  one_password_cli_service.py  one_password_sdk_service.py  one_password_secret_service.py  plain_display_service.py  plan_builder_service.py  plan_persistence_service.py  plan_service.py  project_locator_service.py  project_manifest_service.py  rich_display_service.py  source_fingerprint_service.py  source_resolver_service.py  tool_requirement_service.py  tool_version_service.py  uninstall_service.py
tests/: test_artifacts.py  test_cli.py  test_clients_full.py  test_clients_rendering.py  test_compatibility_service.py  test_config_store.py  test_display_interactive.py  test_env_config.py  test_env_loader.py  test_git_safety.py  test_gitignore.py  test_helpers.py  test_manifest_loader.py  test_mcp_sync.py  test_op_inject.py  test_path_ops.py  test_planning.py  test_precedence.py  test_project.py  test_repo_store.py  test_requirements_loader.py  test_sync_runner.py  test_track_write.py  test_uninstall.py  test_version_checks.py  test_version_checks_extra.py  test_web_api.py
