[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-sync"
version = "0.1.2"
description = "Self-contained AI config sync for Codex, Cursor, and Gemini."
readme = "README.md"
requires-python = ">=3.10"
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"
license-files = ["LICENSE"]
authors = [{ name = "Loup Peluso", email = "loup.peluso@gmail.com" }]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
urls = { Homepage = "https://github.com/Ephasme/ai-sync", Repository = "https://github.com/Ephasme/ai-sync", Issues = "https://github.com/Ephasme/ai-sync/issues" }
dependencies = [
    "onepassword-sdk>=0.4.0",
    "pyyaml>=6.0",
    "pydantic>=2,<3",
    "tomli>=2.0",
    "tomli-w>=1.0",
    "rich>=13.0",
    "questionary>=2.0",
    "pytimeparse>=1.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
ai-sync = "ai_sync.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ai_sync*"]

[tool.setuptools.package-data]
ai_sync = [".client-versions.json"]

[tool.coverage.run]
branch = true
source = ["ai_sync"]

[tool.coverage.report]
show_missing = true
skip_covered = false
omit = ["tests/*"]
